--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"multer": "^1.4.2",
 		"nodemailer": "6.1.1",
 		"nodemailer-express-handlebars": "^5.0.0",
+		"uuid": "^9.0.0",
 		"validator": "^13.7.0"
 	},
 	"devDependencies": {
